--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,8 +3,7 @@
         <div class="col-md-12">
             <div class="login-transform-middle text-center">
 
-                <img src="http://gstox.hollybollygossip.com/wp-content/uploads/2023/11/my-stocks-logo.png"
-                    style="width:250px;"><br><br>
+                <img src="../../assets/images/my-stocks-logo.png" style="width:250px;"><br><br>
                 <section class="login_form">
                     <div class="row no-gutters">
                         <div class="col-md-7">
@@ -20,17 +19,16 @@
                                     <div class="input-box">
                                         <a href="javascript:;" class="forgot-password" id="">I forgot my password</a>
                                         <label for="password">Password</label>
-                                        <input type="password"
-                                            [ngClass]="{'border-red': pass.touched && pass.invalid}" #pass="ngModel"
-                                            [(ngModel)]="password" id="password" name="password" placeholder="Password"
-                                            required />
+                                        <input type="password" [ngClass]="{'border-red': pass.touched && pass.invalid}"
+                                            #pass="ngModel" [(ngModel)]="password" id="password" name="password"
+                                            placeholder="Password" required />
                                     </div>
                                     <input type="submit" value="Login" class="login-btn" />
                                 </form>
                             </div>
                         </div>
                         <div class="col-md-5">
-                            <img src="http://gstox.hollybollygossip.com/wp-content/uploads/2023/11/login-bg-2.png">
+                            <img src="../../assets/images/login-bg-2.png">
                         </div>
                     </div>
 
