--- a/src/app/pages/Reports/derivative-p-and-l-report/derivative-p-and-l-report.component.html
+++ b/src/app/pages/Reports/derivative-p-and-l-report/derivative-p-and-l-report.component.html
@@ -1,3 +1,107 @@
 <section class="stox-card">
-    <p>derivative-p-and-l-report works!</p>
+    <ng-container>
+        <form class="row g-3">
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">From Date</label>
+                <input type="date" class="form-control" id="From">
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">To Date</label>
+                <input type="date" class="form-control" id="to">
+            </div>
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Segment</label>
+                <select id="inputState" class="form-select">
+                    <option value="COM">COM</option>
+                    <option value="CUR">CUR</option>
+                    <option selected value="FNO">FNO</option>
+                </select>
+            </div>
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Report Type</label>
+                <select id="inputState" class="form-select">
+                    <option value="R1">Report 1</option>
+                    <option selected="selected" value="R2">Report 2</option>
+                    <option value="R3">Report 3</option>
+                    <option value="R5">Report 5</option>
+                </select>
+            </div>
+            <div class="col-12">
+                <div class="form-check">
+                    <div>
+                        <label class="form-check-label" for="gridCheck">
+                            Include Expenses
+                        </label>
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                    </div>
+                    <div class="mt-2">
+                        <label class="form-check-label" for="gridCheck">
+                            BF with Close Rate
+                        </label>
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 text-end">
+                <button type="submit" class="btn btn-primary">Run</button>
+            </div>
+        </form>
+    </ng-container>
+
+    <ng-container>
+        <h1 class="text-center stox-title">Derivative P&L Report</h1>
+        <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2>
+        <div class="text-end">
+            <input type="submit" value=""
+                class="fa fa-file - excel - o btn btn-default btn - block text-primary me-3 stox-btn btn-2">
+            <input type="submit" value=""
+                class="fa fa-file-pdf-o btn  btn-default btn-block text-danger stox-btn btn-2">
+        </div>
+
+        <div class="table-responsive mt-2">
+            <table class="table table-hover">
+                <thead class="table-dark">
+                    <tr>
+                        <th colspan="1">Account Id</th>
+                        <th colspan="1">Segment Id</th>
+                        <th colspan="1">Instrument</th>
+                        <th colspan="1">Symbol</th>
+                        <th colspan="1">Exp. Date</th>
+                        <th colspan="1">Strike Price</th>
+                        <th colspan="1">Option Type</th>
+                        <th colspan="1">Buy Qty.</th>
+                        <th colspan="1">Buy Val.</th>
+                        <th colspan="1">Sell Qty</th>
+                        <th colspan="1">Sell Val.</th>
+                        <th colspan="1">Real PL</th>
+                        <th colspan="1">Open Qty.</th>
+                        <th colspan="1">Open Value</th>
+                        <th colspan="1">Close</th>
+                        <th colspan="1">Unreal PL</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td scope="col">245</td>
+                        <td scope="col">Test</td>
+                        <td scope="col">04/12/2023</td>
+                        <td scope="col">095434</td>
+                        <td scope="col">Cased</td>
+                        <td scope="col">5624789</td>
+                        <td scope="col">3/12/2023</td>
+                        <td scope="col">$550</td>
+                        <td scope="col">$500</td>
+                        <td scope="col">100%</td>
+                        <td scope="col">10%</td>
+                        <td scope="col">Pending</td>
+                        <td scope="col">0</td>
+                        <td scope="col">0</td>
+                        <td scope="col">0.2%</td>
+                        <td scope="col">0.00%</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </ng-container>
+
 </section>
