--- a/src/app/pages/Reports/mtf-detail-statement/mtf-detail-statement.component.html
+++ b/src/app/pages/Reports/mtf-detail-statement/mtf-detail-statement.component.html
@@ -1,3 +1,15 @@
 <section class="stox-card">
-    <p>mtf-detail-statement works!</p>
+    <ng-container>
+        <form class="row g-3">
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Trade Date</label>
+                <input type="date" class="form-control" id="to">
+            </div>
+
+            <div class="col-12 text-end">
+                <input type="submit" value=""
+                    class="fa fa-file - excel - o btn btn-default btn - block text-primary me-3 stox-btn btn-2">
+            </div>
+        </form>
+    </ng-container>
 </section>
