--- a/src/app/pages/Reports/year-end-report/year-end-report.component.html
+++ b/src/app/pages/Reports/year-end-report/year-end-report.component.html
@@ -1,3 +1,25 @@
 <section class="stox-card">
-    <p>year-end-report works!</p>
+    <ng-container>
+        <form class="row g-3">
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">From Date</label>
+                <input type="date" class="form-control" id="From">
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">To Date</label>
+                <input type="date" class="form-control" id="to">
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">As on Date</label>
+                <input type="date" class="form-control" id="to">
+            </div>
+
+            <div class="col-12 text-end">
+                <input type="submit" value=""
+                    class="fa fa-file - excel - o btn btn-default btn - block text-primary me-3 stox-btn btn-2">
+                <input type="submit" value=""
+                    class="fa fa-file-pdf-o btn  btn-default btn-block text-danger stox-btn btn-2">
+            </div>
+        </form>
+    </ng-container>
 </section>
