--- a/src/app/pages/Reports/derivative-p-and-l-report/derivative-p-and-l-report.component.html
+++ b/src/app/pages/Reports/derivative-p-and-l-report/derivative-p-and-l-report.component.html
@@ -1,6 +1,8 @@
 <section class="stox-card">
+    <h1 class="text-center stox-title">Derivative P&L Report</h1>
+    <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2>
     <ng-container>
-        <form class="row g-3">
+        <form class="row g-3 mb-3">
             <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">From Date</label>
                 <input type="date" class="form-control" id="From">
@@ -49,8 +51,6 @@
     </ng-container>
 
     <ng-container>
-        <h1 class="text-center stox-title">Derivative P&L Report</h1>
-        <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2>
         <div class="text-end">
             <input type="submit" value=""
                 class="fa fa-file - excel - o btn btn-default btn - block text-primary me-3 stox-btn btn-2">
