--- a/src/app/pages/Request/buy-back/buy-back.component.html
+++ b/src/app/pages/Request/buy-back/buy-back.component.html
@@ -1,3 +1,60 @@
 <section class="stox-card">
-    <p>buy-back works!</p>
+    <!-- <h1 class="text-center stox-title">Exchange Repledge Report</h1> -->
+    <ng-container>
+        <div class="table-responsive mt-2">
+            <table class="table table-hover table-bordered">
+                <thead class="table-dark">
+                    <tr>
+                        <th>Issue Name</th>
+                        <th>BuyBack Price</th>
+                        <th>Record Date</th>
+                        <th>Start Date</th>
+                        <th>End Date</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>GUJARAT NARMADA VALLEY FERTILI</td>
+                        <td>770.00</td>
+                        <td>24/11/2023</td>
+                        <td>01/12/2023 10:11:52</td>
+                        <td>07/12/2023 12:00:00</td>
+                        <td><a href="#">Status</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </ng-container>
+    <ng-container *ngIf="false">
+        <div class="table-responsive mt-2">
+            <table class="table table-hover table-bordered">
+                <thead class="table-dark">
+                    <tr role="row">
+                        <th>DPID</th>
+                        <th>Client ID</th>
+                        <th>Account ID</th>
+                        <th>Name</th>
+                        <th>Branch/SubBranch</th>
+                        <th>Holding Type</th>
+                        <th>Holding Qty.</th>
+                        <th>Current Qty.</th>
+                        <th>Flag</th>
+                        <th>Eligible Flag</th>
+                        <th>Apply Qty.</th>
+                        <th>Email Flag</th>
+                        <th>BID No.</th>
+                        <th>Requested Qty.</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td colspan="15">No data available in table</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </ng-container>
+
 </section>
