--- a/src/app/pages/layout/side-bar/side-bar.component.html
+++ b/src/app/pages/layout/side-bar/side-bar.component.html
@@ -206,7 +206,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="#">
+            <a class="nav-link collapsed" routerLinkActive='active' routerLink="/home/profile">
                 <i class="bi bi-person"></i>
                 <span class="menu-name">Profile</span>
             </a>
