--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,7 @@ a:active {
     opacity: 0.8;
 }
 
-.stox-sub-title{
+.stox-sub-title {
     font-size: 16px;
     font-weight: 500;
     opacity: 0.8;
@@ -41,9 +41,21 @@ a:active {
     transition: all 0.3s ease;
     position: relative;
     display: inline-block;
-     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-     7px 7px 20px 0px rgba(0,0,0,.1),
-     4px 4px 5px 0px rgba(0,0,0,.1);
+    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+        7px 7px 20px 0px rgba(0, 0, 0, .1),
+        4px 4px 5px 0px rgba(0, 0, 0, .1);
     outline: none;
-  }
-  
+}
+
+ng-multiselect-dropdown .multiselect-dropdown .dropdown-btn {
+    display: inline-block;
+    border: 1px solid #dee2e6 !important;
+}
+
+.form-label,
+.form-check-label {
+    margin-bottom: 0.3rem !important;
+    font-size: 14px !important;
+    font-weight: 700;
+    opacity: 0.8;
+}
