--- a/src/app/pages/NSDL Reports/client-master/client-master.component.html
+++ b/src/app/pages/NSDL Reports/client-master/client-master.component.html
@@ -1,3 +1,196 @@
 <section class="stox-card">
-    <p>client-master works!</p>
+    <h1 class="text-center stox-title">Client Master</h1>
+    <ng-container>
+        <form class="row g-3 mb-3">
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Exchange</label>
+                <select id="inputState" class="form-select">
+                    <option selected value="10628651">10628651</option>
+                </select>
+            </div>
+            <div class="col-6 text-start">
+                <button type="submit" style="margin-top: 29px;" class="btn btn-primary">Run</button>
+            </div>
+        </form>
+    </ng-container>
+
+    <ng-container>
+        <div class="text-end">
+            <input type="submit" value=""
+                class="fa fa-file-pdf-o btn me-3 btn-default btn-block text-danger stox-btn btn-2">
+            <button type="submit" name="EMAIL" class="fa fa-envelope btn btn-default btn-block stox-btn btn-2"
+                style="font-size:25px; color: black;"></button>
+        </div>
+
+        <div class="table-responsive mt-2">
+            <table class="table table-bordered table-hover">
+                <tbody>
+                    <tr>
+                        <th style="background: #ebf2f6">Client id</th>
+                        <td>10628651</td>
+                        <th style="background: #ebf2f6">Trading Code</th>
+                        <td>D5422</td>
+                        <th style="background: #ebf2f6"> Standing Instruction</th>
+                        <td>Y</td>
+                        <th style="background: #ebf2f6">Client Name</th>
+                        <td colspan="3">DEVANG R GANDHI</td>
+                        <th style="background: #ebf2f6">Client Type</th>
+                        <td colspan="3">Individual</td>
+                    </tr>
+                    <tr>
+                        <th style="background: #ebf2f6">Account Status </th>
+                        <td>Active </td>
+                        <th style="background: #ebf2f6">A/C Opening Date </th>
+                        <td>22/12/2017 </td>
+                        <th style="background: #ebf2f6">
+                            Status Change Reason
+                        </th>
+                        <td colspan="5"> </td>
+                        <th style="background: #ebf2f6">Branch</th>
+                        <td colspan="3">4 </td>
+                    </tr>
+                    <tr>
+                        <th style="background: #ebf2f6">A/C Category</th>
+                        <td>Non House Beneficiary</td>
+                        <th style="background: #ebf2f6">Sub. Type</th>
+                        <td>Ordinary </td>
+                        <th style="background: #ebf2f6">A/C Clos./Susp. Date</th>
+                        <td colspan="2"> </td>
+                        <th style="background: #ebf2f6">Mobile Flag </th>
+                        <td colspan="2">Y</td>
+                        <th style="background: #ebf2f6">Annual Income </th>
+                        <td colspan="3">Between Rs. 1 to 5 Lac</td>
+                    </tr>
+                    <tr>
+                        <th style="background: #ebf2f6">Net Worth (Rs)</th>
+                        <td></td>
+                        <td colspan="2" style="background: #ebf2f6">Net Worth as on Date</td>
+                        <td colspan="3"></td>
+                        <th style="background: #ebf2f6">PAN</th>
+                        <td colspan="2">ALCPG8996N</td>
+                        <th style="background: #ebf2f6">DOB</th>
+                        <td colspan="3">16/11/1983</td>
+                    </tr>
+                    <tr>
+                        <td style="background: #ebf2f6" colspan="14"><b>Personal details </b> </td>
+                    </tr>
+                    <tr>
+                        <th style="background: #ebf2f6">
+                            Sole/First Holder Name
+                        </th>
+                        <td>DEVANG R GANDHI</td>
+                        <th colspan="2" style="background: #ebf2f6">Client option to receive e-statement</th>
+                        <td colspan="2"></td>
+                        <th colspan="2" style="background: #ebf2f6">First Holder's Father's/Spouse's name</th>
+                        <td colspan="2"></td>
+                        <th style="background: #ebf2f6" colspan="1">Occupation</th>
+                        <td colspan="3">Service</td>
+                    </tr>
+                    <tr>
+                        <th style="background: #ebf2f6">Slab ID</th>
+                        <td colspan="13">12</td>
+                    </tr>
+                    <tr>
+                        <th style="background:#ebf2f6">Address</th>
+                        <td colspan="3">VARDHMAN JASANI PARK STREET NO 3, AIRPORT ROAD </td>
+                        <th style="background:#ebf2f6">PIN code</th>
+                        <td colspan="2">360007</td>
+                        <th style="background:#ebf2f6">Country</th>
+                        <td colspan="2">India</td>
+                        <th style="background:#ebf2f6">State</th>
+                        <td colspan="3">Gujarat</td>
+
+                    </tr>
+                    <tr>
+                        <th style="background: #ebf2f6">Email</th>
+                        <td colspan="3">devanggandhi2000@gmail.com</td>
+                        <th style="background: #ebf2f6">
+                            Mobile/Phone No
+                        </th>
+                        <td>9824827229</td>
+                        <th style="background: #ebf2f6">Mobile Flag</th>
+                        <td>N</td>
+                        <th colspan="3" style="background: #ebf2f6">
+                            One Time Declaration for GSEC IDT Flag
+                        </th>
+                        <td colspan="3"> </td>
+                    </tr>
+                    <tr>
+                        <td style="background: #ebf2f6" colspan="14"><b>Financial Detail</b></td>
+                    </tr>
+                    <tr>
+                        <th style="background: #ebf2f6">Bank Account Number</th>
+                        <td colspan="1">01011140004475</td>
+                        <th style="background: #ebf2f6">Bank Account Type</th>
+                        <td class="abcd">Saving Account</td>
+                        <th style="background: #ebf2f6">IFSC Code</th>
+                        <td class="abcd">HDFC0000101</td>
+                        <th style="background: #ebf2f6">MICR Code</th>
+                        <td class="abcd">360240002</td>
+                        <th style="background: #ebf2f6">LEI No</th>
+                        <td class="abcd"></td>
+                        <th style="background: #ebf2f6">
+                            UPI ID
+                        </th>
+                        <td class="abcd" colspan="3"></td>
+                    </tr>
+                    <tr>
+                        <th style="background: #ebf2f6">Bank Name</th>
+                        <td class="abcd" colspan="5">HDFC BANK</td>
+                        <th style="background: #ebf2f6">POA</th>
+                        <td class="abcd" colspan="3"></td>
+                        <th style="background: #ebf2f6">Tax Ded. Status</th>
+                        <td class="abcd" colspan="3"></td>
+                    </tr>
+                    <tr>
+                        <th style="background: #ebf2f6">Bank Address</th>
+                        <td colspan="5" class="abcd">HDFC BANK HOUSE, NR PRAMUKH SWAMI ARCADE, DR YAGNIK ROAD, RAJKOT
+                        </td>
+                        <th style="background: #ebf2f6">Pin code</th>
+                        <td colspan="5" class="abcd">360001</td>
+
+                    </tr>
+                    <tr>
+                        <td style="background: #ebf2f6" colspan="14"><b>Other Details</b> </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="card-box">
+                <h4 style="font-size: 18px; font-weight: 700;">Nominee Detail</h4>
+                <div class="table-rep-plugin">
+                    <div class="table-responsive b-0" data-pattern="priority-columns">
+                        <div>
+                            <table class="table table-bordered table-hover">
+                                <tbody>
+                                    <tr>
+                                        <th style="background: #ebf2f6">
+                                            <b>First Nominee Name</b>
+                                        </th>
+                                        <th style="background: #ebf2f6">Email</th>
+                                        <th style="background: #ebf2f6">Mobile</th>
+                                        <th style="background: #ebf2f6">PAN</th>
+                                        <th style="background: #ebf2f6" colspan="3">Aadhar</th>
+                                    </tr>
+                                    <tr>
+                                        <td>MONIKA DEVANG GANDHI</td>
+                                        <td>devanggandhi2000@gmail.com</td>
+                                        <td colspan="2">XXXXX 27229</td>
+                                        <td></td>
+                                        <td colspan="3">XXXXXXXX 0276</td>
+                                    </tr>
+                                    <tr>
+                                        <th style="background: #ebf2f6">Nominee Address</th>
+                                        <td colspan="3">JASANI PARK, VASUNDHARA PARK, AIRPORT ROAD, RAJKOT</td>
+                                        <th style="background: #ebf2f6">Pin Code</th>
+                                        <td colspan="3">360007</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ng-container>
+
 </section>
