--- a/src/app/pages/NSDL Reports/nsdl-financial/nsdl-financial.component.html
+++ b/src/app/pages/NSDL Reports/nsdl-financial/nsdl-financial.component.html
@@ -1,3 +1,71 @@
 <section class="stox-card">
-    <p>nsdl-financial works!</p>
+    <h1 class="text-center stox-title mb-3">Financial Ledger</h1>
+    <!-- <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2> -->
+    <ng-container>
+        <form class="row g-3 mb-3">
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">From Date</label>
+                <input type="date" class="form-control" id="From">
+            </div>
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">To Date</label>
+                <input type="date" class="form-control" id="to">
+            </div>
+
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Client ID</label>
+                <select id="inputState" class="form-select">
+                    <option selected value="10628651">10628651</option>
+                </select>
+            </div>
+            <div class="col-12 text-end">
+                <button type="submit" class="btn btn-primary">Run</button>
+            </div>
+        </form>
+    </ng-container>
+
+    <ng-container>
+        <div class="text-end">
+            <input type="submit" value=""
+                class="fa fa-file - excel - o btn btn-default btn - block text-primary me-3 stox-btn btn-2">
+            <input type="submit" value=""
+                class="fa fa-file-pdf-o btn  btn-default btn-block text-danger stox-btn btn-2 me-3">
+            <button type="submit" name="EMAIL" class="fa fa-envelope btn btn-default btn-block stox-btn btn-2"
+                style="font-size:25px; color: black;"></button>
+        </div>
+
+        <div class="table-responsive mt-2">
+            <table class="table table-hover table-bordered">
+                <thead class="table-dark">
+                    <tr role="row">
+                        <th>Financial Date </th>
+                        <th>Trade Date</th>
+                        <th>Narration</th>
+                        <th>Bill No</th>
+                        <th>Reference No</th>
+                        <th>Debit</th>
+                        <th>Credit</th>
+                        <th>Running Balance
+                        </th>
+                    </tr>
+                </thead>
+
+                <tbody>
+
+                    <tr class="odd">
+                        <td valign="top" colspan="8" class="text-center">No data available in table</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="5" rowspan="1" class="">Totals</td>
+                        <td colspan="1" class="">0.00</td>
+                        <td colspan="1">0.00</td>
+                        <td colspan="1">0.00</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+    </ng-container>
+
 </section>
