--- a/src/app/pages/Net-Position/equity-trade-report/equity-trade-report.component.html
+++ b/src/app/pages/Net-Position/equity-trade-report/equity-trade-report.component.html
@@ -1,3 +1,101 @@
 <section class="stox-card">
-    <p>equity-trade-report works!</p>
+    <h1 class="text-center stox-title">Equity Trade Report</h1>
+    <h2 class="text-center stox-sub-title"> As on Date 06-12-2023</h2>
+    <ng-container>
+        <form class="row g-3 mb-3">
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">From Date</label>
+                <input type="date" class="form-control" id="from">
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">To Date</label>
+                <input type="date" class="form-control" id="to">
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Scrip Code</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" aria-label="Recipient's username"
+                        aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Rate Type</label>
+                <select id="inputState" class="form-select">
+                    <option selected value="MKT_RATE">Market Rate</option>
+                    <option value="NET_RATE">Net Rate</option>
+                </select>
+            </div>
+            <div class="col-md-6 mt-0">
+                <label for="inputState" class="form-label">Report Type</label>
+                <select id="inputState" class="form-select">
+                    <option selected="selected" value="PARTY">Client Wise</option>
+                    <option value="PARTY_SCRIP">Client Symbol Wise</option>
+                    <option value="PARTY-SCRIP-DT">Client Symbol Date Wise</option>
+                    <option value="SCRIP-PARTY">Symbol Client Wise</option>
+                    <option value="SCRIP-PARTY-DT">Symbol Client Date Wise</option>
+                </select>
+            </div>
+            <div class="col-12 text-end">
+                <button type="submit" class="btn btn-primary">Run</button>
+            </div>
+        </form>
+    </ng-container>
+
+    <ng-container>
+        <div class="text-end">
+            <input type="submit" value=""
+                class="fa fa-file - excel - o btn btn-default btn - block text-primary me-3 stox-btn btn-2">
+            <input type="submit" value=""
+                class="fa fa-file-pdf-o btn  btn-default btn-block text-danger stox-btn btn-2">
+        </div>
+
+        <div class="table-responsive mt-2">
+            <table class="table table-hover">
+                <thead class="table-dark">
+                    <tr>
+                        <th>Account ID</th>
+                        <th>Account Name</th>
+                        <th>Exchange</th>
+                        <th>Buy Quantity</th>
+                        <th>Buy Value</th>
+                        <th>Sell Quantity</th>
+                        <th>Sell Value</th>
+                        <th>Net Quantity</th>
+                        <th>Net Value</th>
+                        <th>Brokerage</th>
+                        <th>GST</th>
+                        <th>Transaction Charges</th>
+                        <th>SEBI Charges</th>
+                        <th>Stamp Duty</th>
+                        <th>STT</th>
+                        <th>Others</th>
+                        <th>NetPL</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td colspan="3">Grand Total </td>
+                        <td>&nbsp;</td>
+                        <td>0.00</td>
+                        <td>&nbsp;</td>
+                        <td>0.00</td>
+                        <td>&nbsp;</td>
+                        <td>0.00</td>
+                        <td>0.00</td>
+                        <td>0.00</td>
+                        <td>0.00</td>
+                        <td>0.00</td>
+                        <td>0.00</td>
+                        <td>0.00</td>
+                        <td>0.00</td>
+                        <td>0.00</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </ng-container>
+
 </section>
