--- a/src/app/pages/Net-Position/net-position-derivative/net-position-derivative.component.html
+++ b/src/app/pages/Net-Position/net-position-derivative/net-position-derivative.component.html
@@ -1,3 +1,145 @@
 <section class="stox-card">
-    <p>net-position-derivative works!</p>
+    <h1 class="text-center stox-title">Net Position Derivative</h1>
+    <h2 class="text-center stox-sub-title"> As on Date 06-12-2023</h2>
+    <ng-container>
+        <form class="row g-3 mb-3">
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Exchange</label>
+                <select id="inputState" class="form-select">
+                    <option selected value="NSE">NSE</option>
+                    <option value="BSE">BSE</option>
+                    <option value="MCX">MCX</option>
+                </select>
+            </div>
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Segment</label>
+                <select id="inputState" class="form-select">
+                    <option value="COM">COM</option>
+                    <option value="CUR">CUR</option>
+                    <option selected value="FNO">FNO</option>
+                </select>
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">As On Date</label>
+                <input type="date" class="form-control" id="to">
+            </div>
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Instrument</label>
+                <select id="inputState" class="form-select">
+                    <option selected="selected" value="ALL">ALL</option>
+                    <option value="FUTURE">FUTURE</option>
+                    <option value="OPTION">OPTION</option>
+                </select>
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Symbol</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" aria-label="Recipient's username"
+                        aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Expiry Date</label>
+                <input type="date" class="form-control" id="Expiry">
+            </div>
+            <div class="col-md-6 mt-0">
+                <label for="inputPassword4" class="form-label">Strike Price</label>
+                <input type="text" class="form-control" id="price">
+            </div>
+            <div class="col-md-6 mt-0">
+                <label for="inputState" class="form-label">Option type</label>
+                <select id="inputState" class="form-select">
+                    <option selected="selected" value="ALL">ALL</option>
+                    <option value="FF">FF</option>
+                    <option value="CE">CE</option>
+                    <option value="PE">PE</option>
+                </select>
+            </div>
+            <div class="col-12">
+                <div class="form-check">
+                    <label class="form-check-label" for="potion">
+                        Ignore Zero Position
+                    </label>
+                    <input class="form-check-input" type="checkbox" id="potion">
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="form-check">
+                    <label class="form-check-label" for="gridCheck">
+                        Quantity In Lot
+                    </label>
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                </div>
+            </div>
+            <div class="col-12 text-end">
+                <button type="submit" class="btn btn-primary">Run</button>
+            </div>
+        </form>
+    </ng-container>
+
+    <ng-container>
+        <div class="text-end">
+            <input type="submit" value=""
+                class="fa fa-file - excel - o btn btn-default btn - block text-primary me-3 stox-btn btn-2">
+            <input type="submit" value=""
+                class="fa fa-file-pdf-o btn  btn-default btn-block text-danger stox-btn btn-2">
+        </div>
+
+        <div class="table-responsive mt-2">
+            <table class="table table-hover table-bordered">
+                <thead class="table-dark">
+                    <tr>
+                        <th scope="col">Client Code</th>
+                        <th scope="col">Client Name</th>
+                        <th scope="col">Trade Date</th>
+                        <th scope="col">Settlement No.</th>
+                        <th scope="col">Settlement Type</th>
+                        <th scope="col">Bill No</th>
+                        <th scope="col">Bill Date</th>
+                        <th scope="col">Bill Amount</th>
+                        <th scope="col">Gross Value</th>
+                        <th scope="col">Total Expenses</th>
+                        <th scope="col">Brokerage</th>
+                        <th scope="col">Clearing Charges/Auct.</th>
+                        <th scope="col">Exchange Charges</th>
+                        <th scope="col">SEBI Charges</th>
+                        <th scope="col">Transaction Charges</th>
+                        <th scope="col">STT Charges</th>
+                        <th scope="col">Stamp Duty</th>
+                        <th scope="col">Demat Charges</th>
+                        <th scope="col">IPF Charge</th>
+                        <th scope="col">GST</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="col">245</th>
+                        <th scope="col">Test</th>
+                        <th scope="col">04/12/2023</th>
+                        <th scope="col">095434</th>
+                        <th scope="col">Cased</th>
+                        <th scope="col">5624789</th>
+                        <th scope="col">3/12/2023</th>
+                        <th scope="col">$550</th>
+                        <th scope="col">$500</th>
+                        <th scope="col">100%</th>
+                        <th scope="col">10%</th>
+                        <th scope="col">Pending</th>
+                        <th scope="col">0</th>
+                        <th scope="col">0</th>
+                        <th scope="col">0.2%</th>
+                        <th scope="col">0.00%</th>
+                        <th scope="col">one</th>
+                        <th scope="col">2%</th>
+                        <th scope="col">10%</th>
+                        <th scope="col">0.5%</th>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </ng-container>
+
 </section>
