--- a/src/app/pages/Reports/equity-bills-summary/equity-bills-summary.component.html
+++ b/src/app/pages/Reports/equity-bills-summary/equity-bills-summary.component.html
@@ -1,6 +1,8 @@
 <section class="stox-card">
+    <h1 class="text-center stox-title">Equity Bill Summary</h1>
+    <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2>
     <ng-container>
-        <form class="row g-3">
+        <form class="row g-3 mb-3">
             <div class="col-md-12">
                 <label for="inputState" class="form-label">Exchange</label>
                 <select id="inputState" class="form-select">
@@ -24,8 +26,6 @@
     </ng-container>
 
     <ng-container>
-        <h1 class="text-center stox-title">Equity Bill Summary</h1>
-        <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2>
         <div class="text-end">
             <input type="submit" value=""
                 class="fa fa-file - excel - o btn btn-default btn - block text-primary me-3 stox-btn btn-2">
@@ -34,7 +34,7 @@
         </div>
 
         <div class="table-responsive mt-2">
-            <table class="table table-hover">
+            <table class="table table-hover table-bordered">
                 <thead class="table-dark">
                     <tr>
                         <th scope="col">Client Code</th>
