--- a/src/app/pages/financial-ledger/financial-ledger.component.html
+++ b/src/app/pages/financial-ledger/financial-ledger.component.html
@@ -2,7 +2,7 @@
     <h1 class="text-center stox-title">Financial Ledger</h1>
     <h2 class="text-center stox-sub-title"> From 01-04-2023 To 31-03-2024</h2>
     <ng-container>
-        <form class="row g-3 mb-3">
+        <form class="row g-3 mb-3" [formGroup]="financialGroup" (ngSubmit)="save()">
             <div class="col-md-6">
                 <label for="inputPassword4" class="form-label">From Date</label>
                 <input type="date" class="form-control" id="from">
