--- a/src/app/pages/financial-ledger/financial-ledger.component.html
+++ b/src/app/pages/financial-ledger/financial-ledger.component.html
@@ -31,7 +31,7 @@
                     <option value="SLB">SLB</option>
                 </select>
             </div>
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <label for="inputState" class="form-label">Product</label>
                 <select class="form-control  input-sm" id="Product" name="Product" [formControl]="f.Product">
                     <option selected="selected" value="">ALL</option>
@@ -44,7 +44,7 @@
                 <ng-multiselect-dropdown  [formControl]="f.FinancialFilter"  [placeholder]="''" [settings]="dropdownSettings"
                     [data]="dropdownList" (onSelect)="onItemSelect($event)" (onSelectAll)="onSelectAll($event)">
                 </ng-multiselect-dropdown>
-            </div>
+            </div> -->
             <div class="col-12 text-end">
                 <button type="submit" class="btn btn-primary">Run</button>
             </div>
